fix overflow

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,8 @@
-.bg {
+footer {
     background-size: cover;
     background: #191616 no-repeat center;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.58);
+    position: relative;
 }
 
 .height {
