--- a/src/app/pages/home-page/components/banner/banner.component.scss
+++ b/src/app/pages/home-page/components/banner/banner.component.scss
@@ -1,27 +1,17 @@
 // https://startbootstrap.com/snippets/full-image-header/
-.bg {
+header {
     background-image: url("/assets/images/banner.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.58);
 
-    position: absolute;
-    height: 55vh;
+    overflow: hidden;
 
+    height: 55vh;
     @media screen and (max-device-width: 320px) and (max-device-height: 570px) {
         height: 75vh;
     }
-}
-
-// https://css-tricks.com/full-width-containers-limited-width-parents/
-.full-width {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
 }
 
 .whitespace {
